[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = PlexMover
author = Brian Hartvigsen
author_email = brian.andrew@brianandjenny.com
maintainer = Brian Hartvigsen
maintainer_email = brian.andrew@brianandjenny.com
description = Easily move PlexServer between OSes
#long_description = file:README.md
#url = https://github.com/tresni/PlexMover
classifiers =
	Development Status :: 1 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
    Click>=7.0

[options.entry_points]
console_scripts =
    plexmover=PlexMover.PlexMover:cli
